# nikcrm

./: Dockerfile  README.md  alembic.ini  backup_2026-03-02_19-20-34.dump  docker-compose.override.yml  docker-compose.yml  pyproject.toml
bot/: Dockerfile  entrypoint.sh
bot/app/: config.py  main.py
finance_bot/: entrypoint.sh
finance_bot/app/: main.py
migrations/: README  env.py
migrations/versions/: 20251210_0001_init.py  20251210_0002_bigint_tg.py  20251215_0003_admin_actions_user_fk_nullable.py  20251221_0004_purchases.py  20251225_0005_materials.py  20251226_0006_materials_name_unique.py  20251227_0007_reminder_settings.py  20251227_0008_purchases_photo_file_id.py  20251230_0009_users_soft_delete.py  20251230_0010_material_master_access.py  20260106_0011_tasks.py  20260106_0012_tasks_started_by.py  20260107_0013_tasks_photo_file_id.py  20260107_0014_task_notifications.py  20260107_0015_tasks_photo_path.py  20260107_0016_magic_link_tokens.py  20260108_0017_tasks_photo_url.py  20260108_0018_backfill_task_photos.py  20260108_0019_task_photo_key.py  20260113_0020_task_event_edited.py  20260113_0021_user_color.py  20260115_0022_work_shift_days.py  20260115_0023_work_shift_days_emergency.py  20260115_0024_shift_instances.py  20260115_0025_shift_swap_requests.py  (+27 more)
shared/: config.py  db.py  enums.py  logging.py  models.py  permissions.py  schemas.py  utils.py
tests/: test_format_number.py  test_material_master_access.py  test_stocks_report_format.py  test_task_permissions.py  test_tasks_template_invariants.py
web/: Dockerfile  entrypoint.sh
web/app/: main.py  (+5 more)
(+135 files in other folders)
